# rd-sim-wgpu

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js
src/: compute.wgsl  lib.rs  paint.wgsl  render.wgsl
static/: styles.css
