[package]
name = "gray-scott"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19", features = ["derive"] }
log = "0.4.28"
wgpu = { version = "27.0.1", features = ["webgpu", "webgl", "wgsl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
raw-window-handle = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document", 
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "Element",
    "GpuCanvasContext"
] }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
